[package]
name = "rr"
version = "0.1.0"
authors = ["Etienne Beaulieu <ety_95@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
rust_decimal = "1.19"
rust_decimal_macros = "1.19"
