[package]
name = "rental_rod"
version = "0.2.0"
authors = ["Etienne Beaulieu <ety_95@protonmail.com>"]
edition = "2021"
license = "GPL-2.0"
description = "This a flat file database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
rust_decimal = "1.19"
rust_decimal_macros = "1.19"
chrono = "0.4"
